# hm-python

./: .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/hm_python/: console.html  index.html  wikipedia.html
src/hm_python/: console.py  wikipedia.py
src/hm_python.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_console.py  test_wikipedia.py
