[tool.poetry]
name = "hm-python"
version = "0.1.0"
description = ""
license = "MIT"
readme = "README.md"
authors = ["Anton Paramoshin <antonparamoshin@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"


[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
coverage = {extras = ["toml"], version = "^5.2.1"}
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.0"
black = "^19.10b0"
flakehell = "^0.6.0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
pep8-naming = "^0.11.1"
pre-commit = "^2.7.1"


[tool.poetry.scripts]
hm-python = "hm_python.console:main"


[tool.coverage.paths]
source = ["src", "*/site-packages"]


[tool.coverage.run]
branch = true
source = ["hm_python"]


[tool.coverage.report]
show_missing = true
fail_under = 100


[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["click", "hm_python", "nox", "pytest", "requests"]


[tool.mypy]
ignore_missing_imports = true


[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | examples
)/
'''


[tool.flakehell]
format = "grouped"
show_source = true
statistics = false
doctests = true
enable_extensions = "G"
accept_encodings = "utf-8"
max_complexity = 6
max_line_length = 120


[tool.flakehell.plugins]
pyflakes = ["+*", "-F401", "-F403"]
# enable only codes from S100 to S199
flake8-bandit = ["-*", "+S1??"]
# enable everything that starts from `flake8-`
"flake8-*" = ["+*"]
flake8-bugbear = ["+*", "-E501"]
mccabe = ["+*"]
"pep8-naming" = ["+*"]
pycodestyle = ["+*", "-203", "-E266", "-W503"]


[tool.flakehell.exceptions."tests/"]
flake8-bandit = ["-S101"]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
